specs/api.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: api
  name: api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: api
  template:
    metadata:
      labels:
        run: api
    spec:
      containers:
      - image: tenentedan9/api:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        name: api
        ports:
        - containerPort: 9000
      imagePullSecrets:
        - name: regcred
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: api
  name: api
  namespace: default
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    run: api
  type: ClusterIP
