specs/ui.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: ui
  name: ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ui
  template:
    metadata:
      labels:
        run: ui
    spec:
      containers:
      - image: tenentedan9/ui:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        name: ui
        ports:
        - containerPort: 8081
      imagePullSecrets:
      - name: regcred
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ui
  name: ui
  namespace: default
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    run: ui
  type: ClusterIP
