specs/gateway.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: gateway
  name: gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: gateway
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - image: tenentedan9/gateway:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        name: gateway
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: gateway
  name: gateway
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    run: gateway
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
spec:
  backend:
    serviceName: gateway
    servicePort: 8080
